force-app/main/default/objects/Campaign_Member_History__c/Campaign_Member_History__c.object-meta.xml
<CustomObject>
    <description>Shows the change in Lenos Registration status for Campaign Members</description>
    <label>Campaign Member History</label>
    <nameField>
        <displayFormat>CMH-{0}</displayFormat>
        <label>Campaign Member History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Member Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>