force-app/main/default/objects/Campaign_Member_History__c/fields/Current_Lenos_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Lenos_Status_Date__c</fullName>
    <description>Date of most recent Lenos Status change</description>
    <inlineHelpText>Date of most recent Lenos Status change</inlineHelpText>
    <label>Current Lenos Status Date</label>
    <type>DateTime</type>
</CustomField>