force-app/main/default/objects/Campaign_Member_History__c/fields/Lenos_Contact__c.field-meta.xml
<CustomField>
    <fullName>Lenos_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact from Campaign</description>
    <inlineHelpText>Contact from Campaign</inlineHelpText>
    <label>Lenos Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Campaign Member Histories</relationshipLabel>
    <relationshipName>Campaign_Member_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>