force-app/main/default/objects/Campaign_Member_History__c/fields/Lenos_Email__c.field-meta.xml
<CustomField>
    <fullName>Lenos_Email__c</fullName>
    <description>If Contact email is blank, pulls Lead email. If Lead email is blank, pulls Contact email</description>
    <formula>BLANKVALUE(Contact_Email__c, Lead_Email__c)</formula>
    <inlineHelpText>Email to match from Lenos</inlineHelpText>
    <label>Lenos Email</label>
    <type>Text</type>
</CustomField>