force-app/main/default/objects/Campaign_Member_History__c/fields/Original_Lenos_Registration_Status__c.field-meta.xml
<CustomField>
    <fullName>Original_Lenos_Registration_Status__c</fullName>
    <description>Original Status when Campaign Member Created</description>
    <inlineHelpText>Original Status when Campaign Member Created</inlineHelpText>
    <label>Original Lenos Registration Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>