force-app/main/default/objects/Campaign_Member_History__c/fields/Previous_Lenos_Registration_Status__c.field-meta.xml
<CustomField>
    <fullName>Previous_Lenos_Registration_Status__c</fullName>
    <description>Second Lenos Registration Status</description>
    <inlineHelpText>Second Lenos Registration Status</inlineHelpText>
    <label>Previous Lenos Registration Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>