force-app/main/default/objects/Campaign_Member_History__c/fields/Previous_Lenos_Registration_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Previous_Lenos_Registration_Status_Date__c</fullName>
    <description>Date Previous Lenos Registration was Updated</description>
    <inlineHelpText>Date Previous Lenos Registration was Updated</inlineHelpText>
    <label>Previous Lenos Registration Status Date</label>
    <type>DateTime</type>
</CustomField>