force-app/main/default/objects/Campaign_Member_History__c/fields/Test_Email_Field__c.field-meta.xml
<CustomField>
    <fullName>Test_Email_Field__c</fullName>
    <label>Test Email Field</label>
    <type>Email</type>
</CustomField>